# lab06-1

./: CMakeLists(for solver1).txt  CMakeLists.txt  CMakeLists2.1.txt  CPackConfig.cmake  CPackConfig2(for solver1).cmake  ChangeLog.md  README.md
.github/workflows/: CI.yml  CI2.yml  CI3.yml  CI4.yml
Solver/: CMakeLists.txt
Solver/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  solver
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  check  cmake_install.cmake  install_manifest.txt
_build/Testing/Temporary/: CTestCostData.txt
_build/_CPack_Packages/Linux/DEB/: solver-0.1.0.0-Linux.deb
_build/_CPack_Packages/Linux/DEB/solver-0.1.0.0-Linux/: control
_build/_CPack_Packages/Linux/DEB/solver-0.1.0.0-Linux/usr/formatter_lib/: CMakeLists.txt
_build/formatter_ex_lib/: Makefile  cmake_install.cmake
_build/formatter_lib/: Makefile  cmake_install.cmake
_build2/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
_build2/formatter_ex_lib/: Makefile  cmake_install.cmake
_build2/formatter_lib/: Makefile
_build3/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt  solver
_build3/formatter_ex_lib/: Makefile  cmake_install.cmake
_build3/formatter_lib/: Makefile
_build4/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt  solver-0.1.0.0-Linux.deb
_build4/_CPack_Packages/Linux/DEB/solver-0.1.0.0-Linux/: md5sums
_build4/formatter_ex_lib/: Makefile  cmake_install.cmake
_build4/formatter_lib/: Makefile
_build5/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
_build5/_CPack_Packages/Linux/DEB/: solver-0.1.0.0-Linux.deb
_build5/_CPack_Packages/Linux/DEB/solver-0.1.0.0-Linux/: control
_build5/formatter_ex_lib/: Makefile  cmake_install.cmake
_build5/formatter_lib/: Makefile
_build6/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
_build6/_CPack_Packages/Linux/STGZ/: solver-0.1.0.0-Linux.sh
_build6/_CPack_Packages/Linux/TGZ/solver-0.1.0.0-Linux/formatter_ex_lib/: CMakeLists.txt
_build6/_CPack_Packages/Linux/TZ/: solver-0.1.0.0-Linux.tar.Z
_build6/formatter_ex_lib/: Makefile  cmake_install.cmake
_build6/formatter_lib/: Makefile
formatter_ex_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt  README.md
solver_application/_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
solver_application/_build/formatter_ex_lib/: Makefile  cmake_install.cmake
solver_application/_build/formatter_lib/: Makefile
tests/: test1.cpp  test_Transaction.cpp
